<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.example.cdsm.projetl3.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_welcome"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_login_text"/>

        <TextView
            android:id="@+id/login_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_login"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/login_welcome_text"
            app:layout_constraintBottom_toTopOf="@id/login_login_edit_layout"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_login_edit_layout"
            app:layout_constraintTop_toBottomOf="@id/login_login_text"
            app:layout_constraintBottom_toTopOf="@id/login_password_edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_login_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login_login_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_edit_layout"
            app:layout_constraintTop_toBottomOf="@id/login_login_edit_layout"
            app:layout_constraintBottom_toTopOf="@id/login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_edit_layout" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
